--- a/Tervisipaevik_Daria_Valeria/Flyout_Page.xaml
+++ b/Tervisipaevik_Daria_Valeria/Flyout_Page.xaml
@@ -16,30 +16,48 @@
                         Text="Avaleht"
                         CornerRadius="0"
                         Clicked="btnStartPage_Clicked"/>
-                <Button x:Name="btnOhtusookPage"
+                <Button x:Name="btnHommikusookFotoPage"
+                        BackgroundColor="White"
+                        TextColor="Black"
+                        Text="Hommikusöök"
+                        CornerRadius="0"
+                        Clicked="btnHommikusookFotoPage_Clicked"/>
+                <Button x:Name="btnLounasookFotoPage"
+                        BackgroundColor="White"
+                        TextColor="Black"
+                        Text="Lõunasöök"
+                        CornerRadius="0"
+                        Clicked="btnLounasookFotoPage_Clicked"/>
+                <Button x:Name="btnOhtusookFotoPage"
                         BackgroundColor="White"
                         TextColor="Black"
                         Text="Õhtusöök"
                         CornerRadius="0"
-                        Clicked="btnOhtusookPage_Clicked"/>
+                        Clicked="btnOhtusookFotoPage_Clicked"/>
+                <Button x:Name="btnVahepalaFotoPage"
+                        BackgroundColor="White"
+                        TextColor="Black"
+                        Text="Vahepala"
+                        CornerRadius="0"
+                        Clicked="btnVahepalaFotoPage_Clicked"/>
                 <Button x:Name="btnVeejalgiminePage"
                         BackgroundColor="White"
                         TextColor="Black"
                         Text="Veejälgimine"
                         CornerRadius="0"
                         Clicked="btnVeejalgiminePage_Clicked"/>
-                <Button x:Name="btnTreeningudPage"
+                <Button x:Name="btnTreeningudFotoPage"
                         BackgroundColor="White"
                         TextColor="Black"
                         Text="Treeningud"
                         CornerRadius="0"
-                        Clicked="btnTreeningudPage_Clicked"/>
-                <Button x:Name="btnTreeningudFotoPage"
+                        Clicked="btnTreeningudFotoPage_Clicked"/>
+                <Button x:Name="btnEnesetunnePage"
                         BackgroundColor="White"
                         TextColor="Black"
-                        Text="TreeningudFotoPage"
+                        Text="Enesetunne"
                         CornerRadius="0"
-                        Clicked="btnTreeningudFotoPage_Clicked"/>
+                        Clicked="btnEnesetunnePage_Clicked"/>
             </StackLayout>
         </ContentPage>
     </FlyoutPage.Flyout>
